--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -740,7 +740,7 @@
                                             Профессиональные
                                         </td>
                                     </tr>
-                                    <tr ng-click="filterAttachedSkillsByDefaultShow(search.default_skill);filterAttachedSkillsByDefault(search.default_skill)">
+                                    <tr ng-click="filterAttachedSkillsByDefault(search.default_skill)">
                                         <td>
                                             <i ng-show="search.default_skill" class="fa fa-check"></i>
                                             <input name="default" type="checkbox"
