--- a/public/views/user_personage_manager.html
+++ b/public/views/user_personage_manager.html
@@ -203,6 +203,11 @@
                             персонажей
                         </button>
                     </div>
+                    <h4 class="text-center" ng-show="personages.length == 0">
+                        <small>
+                            Вы еще не создали ни одного персонажа, для создания воспользуйтесь формой выше.
+                        </small>
+                    </h4>
                     <div class="row messaging">
                         <div class="messaging-list">
                             <div class="messaging-list-item"
