--- a/public/views/personage_logic/create_personage.html
+++ b/public/views/personage_logic/create_personage.html
@@ -27,6 +27,7 @@
     <script src="/node_modules/jquery-sortable/source/js/jquery-sortable-min.js"></script>
     <script src="/assets/common/js/common.min.js"></script>
     <script src="/assets/common/js/menu.js"></script>
+    <script src="/assets/common/js/tooltip.js"></script>
 
     <script src="../permissions/permissions.js"></script>
     <script src="personage_main_controller.js"></script>
