--- a/public/views/personage_logic/view_personage.html
+++ b/public/views/personage_logic/view_personage.html
@@ -30,7 +30,7 @@
     <script src="/views/permissions/permissions.js"></script>
     <script src="/assets/common/js/common.min.js"></script>
     <script src="/assets/common/js/menu.js"></script>
-    <script src="/assets/common/js/tooltip.js"></script>
+    <script src="/assets/common/js/tooltip.min.js"></script>
     <script src="view_personage.js"></script>
     <script src="/views/permissions/check_player_permissions.js"></script>
 
