--- a/public/views/attributes/attribute_manager.html
+++ b/public/views/attributes/attribute_manager.html
@@ -158,7 +158,7 @@
                 </div>
                 <div class="panel-body">
 
-                    <table id="attributesTable" class="table table-hover nowrap" width="100%" cellspacing="0">
+                    <table id="attributesTable" class="table nowrap" width="100%" cellspacing="0">
                         <thead>
                         <tr>
                             <th>Имя</th>
